tests/baselines/reference/additionOperatorWithUndefinedValueAndValidOperator.errors.txt
additionOperatorWithUndefinedValueAndValidOperator.ts(15,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(16,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(17,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(18,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(19,10): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(20,14): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(21,14): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(22,15): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(23,17): error TS18050: The value 'undefined' cannot be used here.
additionOperatorWithUndefinedValueAndValidOperator.ts(24,20): error TS18050: The value 'undefined' cannot be used here.


==== additionOperatorWithUndefinedValueAndValidOperator.ts (10 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the other operand.
    
    enum E { a, b, c }
    
    declare var a: any;
    declare var b: number;
    declare var c: E;
    declare var d: string;
    
    // undefined + any
    var r1: any = undefined + a;
    var r2: any = a + undefined;
    
    // undefined + number/enum
    var r3 = undefined + b;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r4 = undefined + 1;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r5 = undefined + c;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r6 = undefined + E.a;
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r7 = undefined + E['a'];
             ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r8 = b + undefined;
                 ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r9 = 1 + undefined;
                 ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r10 = c + undefined
                  ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r11 = E.a + undefined;
                    ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    var r12 = E['a'] + undefined;
                       ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    // undefined + string
    var r13 = undefined + d;
    var r14 = undefined + '';
    var r15 = d + undefined;
    var r16 = '' + undefined;